2007-12-21 Linas Vepstas <linas@linas.org>

	* ghtml/C/query.ghtml: add today's date as the default to the form.
	This uses code taken from sf patch 1595106
	* ghtml/C/monthly-daily.ghtml: merge in sf patch 1595106
	* src/main.c: call qof_date_init(); this is needed for newer 
	  libqof versions (version libqof.so.1.0.8 and newer)

2007-12-04  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ctree.c (drag_drop): call ctree_setup every time a
	drag-and-drop completes to work around a bug in GtkCTree's drag
	and drop.
	(ctree_drag): record the source_node only the first time in a
	drag-and-drop operation to work around a bug in GtkCTree.

2007-11-26  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c (prefs_set): reschedule the idle and no_project
	timers when these configurations are changed.

	* src/idle-dialog.c (raise_idle_dialog): Fixed check for validity
	of the idle dialog.

2007-11-18  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/active-dialog.c (schedule_active_timeout): Schedule timeout
	only if it's greater than 0 seconds.

2007-11-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* scripts/Makefile.am (dist_bin_SCRIPTS): Added list of
	scripts to be installed.

2007-11-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c: Created a separate hourly timer for the zeroing the
	daily counters.

2007-11-07  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/prefs.c (prefs_set): restart the main timer when needed.

	* src/app.c (cur_proj_set): start/stop the main timer when needed.

	* src/timer.c (start_main_timer, start_file_save_timer)
	(start_config_save_timer): Added functions to start the main
	timer, file save timer and configuration save timer independently
	of each other.
	(main_timer_func, config_save_timer_func, file_save_timer_func):
	Separated the handling routines for each timer.
	(start_idle_timer, start_no_project_timer): Renamed the
	timer_arm_* functions for name consistency with the other